# piep_kernel_execution_graph

./: .gitignore  KERNEL_REPLAY_ANALYSIS_COMPLETE.md  README.md  environment.yml  extract_unique_kernels.py  kernel_benchmark.py  requirements.txt  unique_kernels_compute.csv  unique_kernels_compute.jsonl  unique_kernels_compute_summary.json  vicuna_tp_profile.py
bloom/: bloom_kernel_counts.csv  bloom_profile.py  bloom_unique_kernels_compute.csv  bloom_unique_kernels_compute.jsonl  bloom_unique_kernels_compute_summary.json  extract_bloom_kernels.py  plot_kernel_gantt.py  run_bloom_profile.sh
kernel_replay_cpp/: AVERAGING_AND_ENERGY.md  BUILD_GUIDE.md  CMakeLists.txt  ENERGY_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  minimal_replay_example.cpp  resultsfull_model_timing.json
kernel_replay_cpp/data/: kernel_signatures.json
kernel_replay_cpp/include/: benchmark_utils.hpp  cublas_kernels.hpp  cuda_kernels.hpp  energy_hooks.hpp  kernel_registry.hpp  libtorch_kernels.hpp
kernel_replay_cpp/results/: comparison_report.json  energy_report.json  energy_report_full_model.json  energy_report_isolated_kernels.json  energy_report_v2.json  full_model_timing.json  gpu_energy_report.json  gpu_power_20260205_020706.csv  gpu_power_20260205_020738.csv  gpu_power_20260205_021359.csv  gpu_power_20260205_021925.csv  gpu_power_20260205_022636.csv  gpu_power_20260205_023351.csv  gpu_power_20260205_023946.csv  gpu_power_20260206_174736.csv  gpu_power_20260206_175335.csv  gpu_power_20260206_180724.csv  gpu_power_20260206_183216.csv  isolated_kernels_timing.json
kernel_replay_cpp/scripts/: calculate_energy.py  calculate_per_kernel_energy.py  classify_kernels.py  export_model.py  gpu_power_logger.py  power.csv  power_logger_headless.py  run_with_gpu_power.sh  run_with_power_logging.sh  wattsup_logger.py
kernel_replay_cpp/src/: aggregation.cpp  cublas_kernels.cpp  cuda_kernels.cpp  full_model_benchmark.cpp  kernel_registry.cpp  libtorch_kernels.cpp  main.cpp
vicuna/: kernel_categories_breakdown.json  run_vicuna_2gpu.sh  vicuna_tp_profile.py
